--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
           <img src="food/logo2.png" alt="Zomato" class="navbar__logo">
         </div>
         <div class="navbar__nav__items">
-          <button class="nav__item">Order Food</button>
+          <button class="nav__item button__primary">Order Food</button>
 
         </div>
 
       </nav>
     </header>
+
+    <main class="container">
+      <section class="hero__container">
+        <div class="hero__image__container">
+          <img src="food/hero.jpg" alt="Image of food" class="hero__image">
+        </div>
+        <div class="hero__description">
+          <h1 class="hero__text">Order food from favourite restaurants near you</h1>
+          <button class="button__primary">Order Now</button>
+        </div>
+      </section>
+
+    </main>
 
   </body>
 </html>
