--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
         </div>
       </section>
 
+      <!-- Explore our menu section -->
+      <section class="explore__menu__container">
+        <h1 class="explore__menu__text">Explore our menu</h1>
+        <div class="explore__menu__gradient__background">
+
+        </div>
+        <div class="explore__menu__lists">
+          <!-- Burger -->
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img src="food/burger.jpg" alt="Image of a burger" class="food__image">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Burgers</h3>
+              <p>Burger King, Mcdonalds, Burger Place <span style="color : #ef233c">+3</span></p>
+            </div>
+
+          </div>
+          <!-- Pizza -->
+          <div class="food__card" id="pizza__card">
+            <div class="food__card__image__container">
+              <img src="food/pizza.jpg" alt="Image of a pizza" class="food__image">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Pizza</h3>
+              <p>Pizza Hut, Domino's Pizza <span style="color : #ef233c">+3</span></p>
+            </div>
+
+          </div>
+
+          <!-- Ice creams -->
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img src="food/icecream.jpg" alt="Image of an IceCream" class="food__image">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Ice Creams</h3>
+              <p>Baskin Robins, Ibaco <span style="color : #ef233c">+3</span></p>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
     </main>
 
   </body>
