Added more styling

--- a/index.html
+++ b/index.html
@@ -77,7 +77,52 @@
         </div>
       </section>
 
-    </main>
+      <!-- Email section -->
+      <section class="email__section">
+        <h1 class="email__section__heading">Stay Updated</h1>
+        <div class="email__section__div">
+          <div class="email__section__form">
+            <form class="email__section__form__fill" action="index.html" method="post">
+              <input type="email" name="" value="" class="email__section__form__fill__button" placeholder="email@email.com">
+            </form>
+          </div>
+          <div class="email__section__button">
+            <button class="button__primary" >Get Updates</button>
+          </div>
 
+        </div>
+      </section>
+
+      <!-- Quote section -->
+      <section class="quote__section">
+        <div class="quote__section__image">
+          <img src="food/chair.jpg" alt="Image" class="quote__section__image__pic">
+        </div>
+        <div class="quote__section__quote">
+          <h1>When a man's stomach is full it makes no difference whether he is rich or poor</h1>
+        </div>
+      </section>
+
+
+
+
+  </main>
+
+  <!-- footer section -->
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer__image">
+      <img src="food/logo.png" alt="Zomato" class="footer__image__pic">
+    </div>
+    <div class="footer__list">
+      <ul>
+        <li class="footer__list__items">Pricing</li>
+        <li class="footer__list__items">Terms and conditions</li>
+        <li class="footer__list__items">Partnership</li>
+        <li class="footer__list__items">Career</li>
+        <li class="footer__list__items">Contact</li>
+      </ul>
+    </div>
+  </footer>
   </body>
 </html>
